[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/baseMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/backGround.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GameScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/torre1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Towers/torre.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Panel 12.png" type="Texture" id=7]
[ext_resource path="res://Scenes/EnemyPath.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -12, 907, 0, 0, 0, 0, 25, 910 )
}

[node name="GameScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )
script = ExtResource( 8 )

[node name="enemys" type="YSort" parent="EnemyPath"]

[node name="WaveSpeed" type="Timer" parent="EnemyPath"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="tower_preview" type="Control" parent="UI"]
visible = false

[node name="Tower" parent="UI/tower_preview" instance=ExtResource( 6 )]

[node name="Hud" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CraftButtons" type="HBoxContainer" parent="UI/Hud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -100.0
margin_right = 300.0
rect_min_size = Vector2( 600, 100 )
alignment = 1

[node name="tower" type="TextureButton" parent="UI/Hud/CraftButtons"]
margin_left = 250.0
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="UI/Hud/CraftButtons/tower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
texture = ExtResource( 5 )
expand = true

[node name="NextButton" type="TextureButton" parent="UI/Hud"]
anchor_left = 0.794
anchor_top = 0.881
anchor_right = 0.958
anchor_bottom = 0.972
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="UI/Hud/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "next"
align = 1
valign = 1

[node name="towers" type="YSort" parent="."]
